--- a/Views/Shared/_UpdateCarModal.cshtml
+++ b/Views/Shared/_UpdateCarModal.cshtml
@@ -1,21 +1,22 @@
+@model Car
+
 <div class="modal fade" id="updateCarModal">
     <div class="modal-dialog">
         <div class="modal-content modal-container">
-            <form class="">
+            <form method="POST" asp-action="Update" asp-controller="Car">
                 <div class="modal-header border-0">
                     <h4 class="modal-title">Actualizar Auto</h4>
                 </div>
+                <input type="hidden" asp-for="CarID" />
                 <div class="modal-body modal-body-inputs">
-                    <input type="text" id="carTag" placeholder="Matricula" class="form-control input-bordered-white">
-                    <input type="text" id="carBrand" placeholder="Marca" class="form-control input-bordered-white">
-                    <input type="text" id="carModel" placeholder="Modelo" class="form-control input-bordered-white">
-                    <div class="custom-file mt-2">
-                        <input type="file" class="custom-file-input input-bordered-white" id="carPhoto">
-                        <label class="custom-file-label input-bordered-white" for="carPhoto">Elegir Foto</label>
-                    </div>
+                    <input type="hidden" asp-for="ClientID" value="@Model.ClientID" class="form-control input-bordered-white">
+                    <input type="text" asp-for="carTag" value="@Model.carTag" class="form-control input-bordered-white">
+                    <input type="text" asp-for="brand" value="@Model.brand" class="form-control input-bordered-white">
+                    <input type="text" asp-for="model" value="@Model.model" class="form-control input-bordered-white">
+                    <input type="text" asp-for="photoUrl" value="@Model.photoUrl" class="form-control input-bordered-white">
                 </div>
                 <div class="modal-footer border-0 modal-conte-buttons">
-                    <button type="button" class="btn btn-light">
+                    <button type="submit" class="btn btn-light">
                         GUARDAR
                     </button>
                 </div>
