--- a/Views/Shared/_CreateDateReasonModal.cshtml
+++ b/Views/Shared/_CreateDateReasonModal.cshtml
@@ -1,12 +1,12 @@
-<div class="modal fade" id="createSubjectModal">
+<div class="modal fade" id="createDateReasonModal">
     <div class="modal-dialog">
         <div class="modal-content modal-container">
-            <form method="POST" asp-action="Create" asp-controller="Subject">
+            <form method="POST" asp-action="Create" asp-controller="DateReason">
                 <div class="modal-header border-0">
-                    <h4 class="modal-title">Crear Asunto</h4>
+                    <h4 class="modal-title">Crear Razón de Cita</h4>
                 </div>
                 <div class="modal-body modal-body-inputs">
-                    <input type="text" name="subject" placeholder="Asunto" class="form-control input-bordered-white" required>
+                    <input type="text" name="reason" placeholder="Razón" class="form-control input-bordered-white" required>
                 </div>
                 <div class="modal-footer border-0 modal-conte-buttons">
                     <button type="submit" class="btn btn-light">
