--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -25,6 +25,7 @@
                 <button class="btn btn-light btn-block" data-toggle="modal" data-target="#createCarModal">AGREGAR AUTO</button>
             </div>
             <div class="col-12 gradient-gray p-3">
+                <!--
                 <div class="mb-4">
                     <div class="row">
                         <div class="col-11">
@@ -36,7 +37,7 @@
                             </button>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <!--Lista de autos-->
                 <div class="row">
                 @foreach (Car c in (List<Car>) ViewData["clientCars"]){
