--- a/Views/Config/Clients.cshtml
+++ b/Views/Config/Clients.cshtml
@@ -55,3 +55,14 @@
             }
     </table>
 </div>
+
+<!--Modal Info-->
+@await Html.PartialAsync("_InfoModal")
+@section scripts{
+    <script>
+        @{
+            if (ViewData["showInfoModal"] == null){ ViewData["showInfoModal"] = "hide"; }
+        }
+        $('#InfoModal').modal('@ViewData["showInfoModal"]')
+    </script>
+}
