--- a/Views/Config/Fixes.cshtml
+++ b/Views/Config/Fixes.cshtml
@@ -47,3 +47,14 @@
             }
     </table>
 </div>
+
+<!--Modal Info-->
+@await Html.PartialAsync("_InfoModal")
+@section scripts{
+    <script>
+        @{
+            if (ViewData["showInfoModal"] == null){ ViewData["showInfoModal"] = "hide"; }
+        }
+        $('#InfoModal').modal('@ViewData["showInfoModal"]')
+    </script>
+}
